// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings/_components/RelayServer/RelayServerForm Default smoke-test 1`] = `
<div class="rounded-lg border bg-card p-4 text-card-foreground shadow-sm">
  <form action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')">
    <div class="space-y-2">
      <label class="block font-bold"
             for="inbox-url"
      >
        リレーサーバー
      </label>
      <input class="flex h-10 w-full rounded-md border border-input bg-input-inner px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
             id="inbox-url"
             required
             placeholder="https://example.com/inbox"
             value="https://example.com/inbox"
             name="inbox-url"
      >
      <div class="flex items-center">
        <button class="relative inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2 ml-auto">
          <span class>
            変更する
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`settings/_components/RelayServer/RelayServerForm Empty smoke-test 1`] = `
<div class="rounded-lg border bg-card p-4 text-card-foreground shadow-sm">
  <form action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')">
    <div class="space-y-2">
      <label class="block font-bold"
             for="inbox-url"
      >
        リレーサーバー
      </label>
      <input class="flex h-10 w-full rounded-md border border-input bg-input-inner px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
             id="inbox-url"
             required
             placeholder="未設定"
             name="inbox-url"
      >
      <div class="flex items-center">
        <button class="relative inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2 ml-auto">
          <span class>
            変更する
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`settings/_components/RelayServer/RelayServerForm Error smoke-test 1`] = `
<div class="rounded-lg border bg-card p-4 text-card-foreground shadow-sm">
  <form action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')">
    <div class="space-y-2">
      <label class="block font-bold"
             for="inbox-url"
      >
        リレーサーバー
      </label>
      <input class="flex h-10 w-full rounded-md border border-input bg-input-inner px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
             id="inbox-url"
             required
             placeholder="https://example.com/inbox"
             value="https://example.com/inbox"
             name="inbox-url"
      >
      <div class="flex items-center">
        <button class="relative inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2 ml-auto">
          <span class>
            変更する
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;
